[gd_scene load_steps=2 format=3 uid="uid://6g307h8atf22"]

[ext_resource type="Script" path="res://scenes/game/levels/saved_game/item/item.gd" id="1_s3w2g"]

[node name="Item" type="TextureButton"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -566.0
offset_top = -314.0
offset_right = -466.0
offset_bottom = -214.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
ignore_texture_size = true
stretch_mode = 6
script = ExtResource("1_s3w2g")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -26.0
offset_right = 24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
